# octave-tablicious

./: Makefile  __octave_tablicious_make_local__.m
doc/: Tablicious.qch
inst/: csv2table.m  csv_matrix.cc  csv_matrix.oct  csv_reader.h  readtable.m  try1.m
inst/+octave/+table/+internal/+io/: __exit_io__.m  __init_io__.m  append_save.m  calccelladdress.m  chk_spreadsheet_support.m  dbfread.m  dbfwrite.m  fexist.m  getxmlattv.m  getxmlnode.m  io_ods_testscript.m  io_xls_testscript.m  object2json.m  oct2ods.m  oct2xls.m  ods2oct.m  odsclose.m  odsfinfo.m  odsopen.m  odsread.m  odswrite.m  parsecell.m  pch2mat.m  read_namelist.m  rfsearch.m  test_spsh.m  tidyxml.m  unicode2utf8.m  utf82unicode.m  write_namelist.m  xls2oct.m  xlsclose.m  xlsfinfo.m  xlsopen.m  xlsread.m  xlswrite.m  xmlread.m  xmlwrite.m
inst/+octave/+table/+internal/+io/private/: __COM_chk_sprt__.m  __COM_getnmranges__.m  __COM_getusedrange__.m  __COM_oct2spsh__.m  __COM_spsh2oct__.m  __COM_spsh_close__.m  __COM_spsh_info__.m  __COM_spsh_open__.m  __JOD_chk_sprt__.m  __JOD_getnmranges__.m  __JOD_getusedrange__.m  __JOD_oct2spsh__.m  __JOD_spsh2oct__.m  __JOD_spsh_close__.m  __JOD_spsh_info__.m  __JOD_spsh_open__.m  __JXL_chk_sprt__.m  __JXL_getnmranges__.m  __JXL_getusedrange__.m  __JXL_oct2spsh__.m  __JXL_spsh2oct__.m  __JXL_spsh_close__.m  __JXL_spsh_info__.m  __JXL_spsh_open__.m  __OCT_getnmranges__.m  __OCT_getusedrange__.m  __OCT_gnm2oct__.m  __OCT_gnm_getnmranges__.m  __OCT_merge_data__.m  __OCT_oct2gnm__.m  __OCT_oct2ods__.m  __OCT_oct2spsh__.m  __OCT_oct2xlsx__.m  __OCT_ods2oct__.m  __OCT_ods_getnmranges__.m  __OCT_spsh_close__.m  __OCT_spsh_info__.m  __OCT_spsh_open__.m  __OCT_xlsx2oct__.m  __OCT_xlsx_getnmranges__.m  (+47 more)
inst/+octave/+table/+internal/+io/test/: cell2csv.cc-tst  col2num.cc-tst  csv2cell.cc-tst  num2col.cc-tst
src/: Makefile  aclocal.m4  cell2csv.cc  col2num.cc  config.h  config.h.in  config.status  configure  configure.ac  csv2cell.cc  csvconcat.cc  csvexplode.cc  num2col.cc  oct-alt-includes.h
